--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -330,8 +330,9 @@
 <h4 id="current">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide or reimburse for a course, a program, or training to your current or former employee, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee returns to work for you for a reasonable amount of time after the completion of the course, program or training, you must be able to justify your position regarding the length of the period of time being reasonable</li>
-<li class="cnjnctn-col"><p>The course, program or training is for <strong>one</strong> of the following employment-related purpose: </p>
+<li class="cnjnctn-col">Your employee returns to work for you for a reasonable amount of time after the completion of the course, program or training</li>
+<li class="cnjnctn-col">You must be able to justify your position regarding the length of the period of time being reasonable</li>
+<li class="cnjnctn-col"><p>The course, program or training is for <strong>one</strong> of the following employment-related purposes: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#specific" aria-controls="centred-popup" class="wb-lbx" role="button">Specific&nbsp;<span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#general" aria-controls="centred-popup" class="wb-lbx" role="button">Business or general&nbsp;<span class="far fa-question-circle"></span></a></li>
@@ -375,7 +376,7 @@
 <p>A student may receive educational assistance in exchange for which they agree to work at the end of their studies or training for the person granting the financial assistance. </p>
 </details>
 <h5>Report on T4A slip</h5>
-<p>You payer must report the full amount of the educational assistance paid to the recipient on a T4A slip <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+<p>You payer must report the full amount of the educational assistance paid on T4A slip in the name of the future employee <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
  <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
 <p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
 <h4>Employee and employer relationship before the benefit is provided</h4>
@@ -387,21 +388,23 @@
 <h3>Benefit provided to one of your employee's family members</h3>
 <details><summary>Situation: You provide <strong>free or reduced tuition fees</strong> to your employee’s family members</summary>
 <h4>Non-taxable situation</h4>
-<p>If you provide free or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>If you provide free or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable to the employee if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">You and your employee <strong>deal at arm’s length</strong></li>
-<li class="cnjnctn-col">Benefit is <strong>not</strong> provided as a substitute for salary, wages or other remuneration</li>
+<li class="cnjnctn-col">Benefit is <strong>not</strong> provided as a substitute for salary, wages or other remuneration of the employee</li>
 </ul>
-<p>In this situation, there is no employee/employer relationship between the payer and the family member of the employee. The individual must report the amounts received on their T1 return.</p>
+<p>In this situation, there is no employee/employer relationship between the payer and the family member of the employee. The family member must report the amounts received on their T1 return.</p>
 
 <h5>Report on T4A slip</h5>
-<p>The payer must report the full amount of the educational assistance paid on a T4A slip. If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
+<p>You payer must report the fair market value of the educational assistance paid on a T4A slip in the name of the family member <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+ <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
 <p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
 
 <h4>Taxable situation</h4>
-<p>If the benefit provided <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the benefit provided <strong>does not</strong> meet all of the conditions above, the benefit is taxable to the employee.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
+
 <details><summary>Situation: You pay or reimburse your employee for <strong>educational allowance</strong> for their <strong>children</strong></summary>
 <h4>Non-taxable situation</h4>
 <p>If you pay or reimburse your employee for educational allowance for their children, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
