--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -414,15 +414,11 @@
 <li class="cnjnctn-col">The education is provided in the <strong>official language of Canada primarily used</strong> by your employee</li>
 <li class="cnjnctn-col">The school is the <strong>nearest suitable school</strong> available in that official language</li>
 <li class="cnjnctn-col">The child is in <strong>full-time attendance</strong> at the school</li>
-<li class="cnjnctn-col">The subsidy you provide is <strong>reasonable</strong>, you must be prepared to justify your position</li>
+<li class="cnjnctn-col">The subsidy you provide is <strong>reasonable</strong> and you must be prepared to justify your position</li>
 </ul>
-<p>In this situation, there is no employee/employer relationship between the payer and the family member of the employee. The individual must report the amounts received on their T1 return.</p>
 
-<h5>Report on T4A slip</h5>
-<p>The payer must report the full amount of the educational allowance paid on a T4A slip. If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
-<p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
 <h4>Taxable situation</h4>
-<p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable. You must include the amount in your employee's income for the year.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
 
@@ -526,13 +522,20 @@
   </details>
 
 <h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
+<p>You must withhold the following deductionsdepending on who the <strong>payment is made</strong> to: </p>
+
   <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>
 
 <h2 id="h_4">Report the benefit on a slip</h2>
+<p>You must report on a slip depending on who the <strong>payment is made</strong> to: </p>
+
+<ul class="list-unstyled cnjnctn-type-and ">
+<li class="cnjnctn-col">
 <details><summary>Report: T4 slip</summary>
 <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/report.txt"></div>
 </details>
-
+</li>
+<li class="cnjnctn-col">
 <details><summary>Report: T4A slip</summary>
 <p>You must report the following amounts on the T4A slip.</p>
 <p>Report on:</p>
@@ -545,7 +548,7 @@
  
  <p class="mrgn-tp-lg"><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn how to <strong>report</strong> the benefit on a slip: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>. </p>
 </details>
-		 
+</li>	</ul>		 
 		 
 <h2 id="h_5">References</h2>
 <h3 id="h_5_2">Legislation</h3>
