--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -428,7 +428,7 @@
 <h5>Determine if the work location is considered remote</h5>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/remote.html #ajax-remote"></div></p>
 <h4>Taxable situation</h4>
-<p>If the benefit <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the benefit <strong>does not</strong> meet the conditions above, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
 </li>
