--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -522,46 +522,45 @@
 
 <details>
 			<summary>Example 2 - Calculations</summary>
-<p>Add info here</p>
+<p>Debbie’s employer is a university which allowed her brother to attend their courses for free. Her brother took one course in the tax year, which had a FMV of $600. Debbie deals with the employer at arm’s length. </p>
 
 		<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">$? is the total value of the ???</span> 
+                                       </span><span class="mrgn-tp-0 text-muted h5">$600 is the total value of the education benefit provided</span> 
                                     </li>
 
  				<li class="brdr-bttm">
                                        <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$? is the amount of the ??? that are not taxable</span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$0 is the amount of the education benefit that is not taxable</span>
                                        <div class="mrgn-tp-md"></div>
                                     </li>
 			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$? is the total value of the ??? that is taxable
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$600 is the total value of the education benefit that is taxable
                                        </span></span> 
                                     </li>
 			<li class="brdr-bttm">
                                        <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$? because the employee does not reimburse the employer</span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$0 because the employee does not reimburse the employer</span>
                                        <div class="mrgn-tp-md"></div>
                                     </li>
 
                      	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$? is the value of the benefit <strong>to be included on name's T4 slip</strong>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$600 is the value of the benefit to be included on Debbie's brother’s T4A slip</strong>
                                        </span></span> 
                                     </li>
 		
                   </ul>	
 
-<p>The amounts must be included in the pay period they were received or enjoyed. </p>
   </details>
 
 <h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
