--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -309,10 +309,8 @@
 <li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
 </ul>	</li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing, safety footwear and safety glasses</h4> 
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
-<li class="cnjnctn-col">It is designed to protect your employee from hazards associated with their employment</li>
-</ul></li>
+<p>It is designed to protect your employee from hazards associated with their employment</p>
+</li>
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -322,12 +320,20 @@
 </ul>
 </li>
 <li><h3 id="step2">Determine if the benefit is taxable</h3>
-<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable, including if the cost related to laundry or dry cleaning, if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Benefit provided meets <strong>all conditions in step 1</strong>, including if the cost is for laundry or dry cleaning</li>
+<li class="cnjnctn-col">Benefit provided meets <strong>all conditions</strong> of a distinctive uniform or protecting clothing, safety footwear and safety glass</li>
 <li class="cnjnctn-col">The cost is reasonable and you can justify your position </li>
-<li class="cnjnctn-col">If you reimbursed or provided an accountable advance, you received a copy of the receipts from your employee</li>
-</ul>
+<li class="cnjnctn-col">If provided an allowance:
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
+<li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
+</ul></li>
+<li class="cnjnctn-col">If you reimbursed or provided an accountable advance:
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">You received a copy of the receipts from your employee</li>
+<li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
+</ul></li></ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations.</p>
