--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -362,7 +362,7 @@
                         </tr>
 			   
 			        <tr>
-                           <td><a href="tickets.html">Event tickets</a> <span class="label label-info">CVB - SME reviewing</span></td>
+                           <td><a href="tickets.html">Event tickets</a> <span class="label label-warning">With ABSB</span></td>
                            <td>Work-related expenses</td>
                         </tr>
 			         <tr>
