--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -289,7 +289,7 @@
 
 <p>You may provide educational assistance to your employee, a former employee or an employee's family member. </p>
 
-<details><summary>Examplex</summary>
+<details><summary>Example</summary>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Reimbursement or payment of tuition and training fees </li>
 <li><span class="fas fa-check fa-li text-success"></span> Scholarships and bursaries </li>
@@ -396,7 +396,7 @@
 <p>In this situation, there is no employee/employer relationship between the payer and the family member of the employee. The family member must report the amounts received on their T1 return.</p>
 
 <h5>Report on T4A slip</h5>
-<p>You payer must report the fair market value of the educational assistance paid on a T4A slip in the name of the family member <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+<p>The payer must report the fair market value of the educational assistance paid on a T4A slip in the name of the family member <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
  <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
 <p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
 
@@ -435,13 +435,14 @@
 <li class="cnjnctn-col">
 <h3>Benefit provided to a recipient</h3>
 <details><summary>Situation: You pay the cost for a <strong>research grant</strong> to a recipient (not your employee) to assist them to carry out research</summary>
-<h3>Jeremiah... should we provide info here? reuse the content or redirect the user immediately to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/research-grants.html">Payments related to research grants</a>. Note that this content will also be rewritten on that weppage and is within the other payment segment</h3>
 <h4>Non-taxable situation</h4>
 <p>If you pay the cost for research grant to a recipient to assist them to carry out research, this is <strong>not </strong>taxable as an employee benefit because there is no employee/employer relationship between the payer and the recipient.</p>
 <p>The recipient must report the amounts received on their T1 return.</p>
-<h4>Report on T4A slip</h4>
-<p>The payer must report the full amount of the research grant paid on a T4A slip. If they meet certain criteria, the recipient may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
+<h5>Report on T4A slip</h5>
+<p>The payer must report the the full amount of the research grant paid on a T4A slip in the name of the recipient <strong>regardless of whether the benefit is taxable or not.</strong>  </p>
+ <p>If they meet certain criteria, the individual may claim the non-refundable tuition tax credit or the educational amount, on their T1 return. </p>
 <p>Continue to <a href="#h_4">Report the benefit on a slip</a>.</p>
+
 <h4>Taxable situation</h4>
 <p>If the benefit is <strong>not </strong> a research grant, the benefit is taxable.</p>
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
@@ -594,9 +595,9 @@
  <li class="cnjnctn-col">
     <h3 class="mrgn-tp-sm text-muted h4">Future employee or family member: T4A slip <span class="wb-inv">: Option 3</span></h3>
     <p>Report on: </p>  <ul class="fa-ul">
-                       <li><span class="fas fa-check fa-li text-success"></span>Code 104 - Other information: <strong>Research grants</strong></li>
-                         <li><span class="fas fa-check fa-li text-success"></span>Code 105 - Other information: <strong>Scholarships, fellowships, bursaries, and artists' project grants</strong></li>
-	    <li><span class="fas fa-check fa-li text-success"></span>Code 210 - Other information: <strong>Postdoctoral fellowship income</strong></li>
+                       <li><span class="fas fa-check fa-li text-success"></span>Code 104 - Research grants</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Code 105 - Scholarships, fellowships, bursaries, and artists' project grants</li>
+	    <li><span class="fas fa-check fa-li text-success"></span>Code 210 - Postdoctoral fellowship income</li>
                       
                      </ul>
   </li>
