--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,7 +261,7 @@
 
 </div>
 
-<p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
+<p>You have a legal obligation to report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt. Even when the income is tax exempt, these amounts are used to calculate the net exempt income on Form T90, which determines the eligibility of the worker for the Canada Workers' Benefit (CWB) and other related provincial/territorial benefits. </p>
 
 <p>If the payment is <strong>not</strong> employment or self-employment income, continue to <a href="first-nations-pop1.html">Information on the tax exemption under section 87 of the Indian Act</a></p>
 
