--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -587,13 +587,15 @@
 </ul>
 <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small> <p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p></li> 	
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>tax-exempt</strong> non-eligible retiring allowances you paid</small></li>
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)
+<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+</small></li> 	
 </ul>
 
  </li>
