--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -612,7 +612,9 @@
  <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
- if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li>
+ if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)
+<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
+</small></li>
 
 <li><span class="fas fa-check fa-li text-success"></span>Code 66 <small>- Report <strong>only on taxable income</strong> if you paid eligible retiring allowances </small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 67 <small>- Report <strong>only on taxable income </strong> if you paid non-eligible retiring allowances</small></li>
@@ -621,7 +623,9 @@
 
  <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)
+<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+</small></li> 
 </ul>
 
 <h5>Taxable benefits</h5>
@@ -846,12 +850,16 @@ You need to review specific considerations when you apply the connecting factors
 </ul>
  <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
+<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
+</small></li> 
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
+<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+</small></li> 
 </ul>
 </li>
 
