--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -587,14 +587,14 @@
 </ul>
 <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small> <p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small> <p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p></li> 	
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>tax-exempt</strong> non-eligible retiring allowances you paid</small></li>
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
 </small></li> 	
 </ul>
 
@@ -613,7 +613,7 @@
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
  if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
 </small></li>
 
 <li><span class="fas fa-check fa-li text-success"></span>Code 66 <small>- Report <strong>only on taxable income</strong> if you paid eligible retiring allowances </small></li>
@@ -624,7 +624,7 @@
  <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
 </small></li> 
 </ul>
 
@@ -851,14 +851,14 @@ You need to review specific considerations when you apply the connecting factors
  <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
 </small></li> 
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
 </small></li> 
 </ul>
 </li>
@@ -877,14 +877,14 @@ You need to review specific considerations when you apply the connecting factors
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
  if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report RPP contributions relating to tax-exempt income using a new code.</p>
 </small></li>
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)
-<p><span class="label label-info">Slips filed for calendar year 2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
+<p><span class="label label-info">2024 and after</span> For T4 slips filed for calendar year 2024 and after, you will need to report union dues relating to tax-exempt income using a new code.</p>
 </small></li> 
 </ul>
 
