--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,7 +261,11 @@
 
 </div>
 
-<p>You have a legal obligation to report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt. Since net exempt income is not reported on a T1 return, these amounts are used to calculate using Form T90, Income Exempt from Tax under the Indian Act. The information on Form T90 is used to determine the eligibility of the worker for the Canada Workers' Benefit and other related provincial or territorial benefits. </p>
+<p>You have a legal obligation to report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt. </p>
+
+<details><summary>What is the <strong>purpose of reporting exempt income</strong> on a T4 or T4A slip </summary>
+<p>Since net exempt income is not reported on a T1 return, these amounts are used to calculate using Form T90, Income Exempt from Tax under the Indian Act. The information on Form T90 is used to determine the eligibility of the worker for the Canada Workers' Benefit and other related provincial or territorial benefits. </p>
+</details>
 
 <p>If the payment is <strong>not</strong> employment or self-employment income, continue to <a href="first-nations-pop1.html">Information on the tax exemption under section 87 of the Indian Act</a></p>
 
