--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -265,6 +265,8 @@
 
 <details><summary>What is the <strong>purpose of reporting exempt income</strong> on a T4 or T4A slip </summary>
 <p>Since net exempt income is not reported on a T1 return, these amounts are used to calculate using Form T90, Income Exempt from Tax under the Indian Act. The information on Form T90 is used to determine the eligibility of the worker for the Canada Workers' Benefit and other related provincial or territorial benefits. </p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples.html">Taxes and benefits for Indigenous peoples</a> </p>
+
 </details>
 
 
