moving content over

--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -72,19 +72,163 @@
             <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
+               <li><a href="#h-1">Determine the filing due date</a>
+	       <ul>
+		         <li><a href="#h-1-1">Based on information return type</a></li>
+		         <li><a href="#h-1-2">Based on a special situation</a></li>
+	       </ul>
+	       </li>
+               <li><a href="#h-2">When is an information return considered on time</a></li>
+               <li><a href="#h-3">What happens if you file late or you do not file</a></li>
+             
             </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+ 
+<h2 id="h-1">Determine  the filing due date</h2>
+<h3 id="h-1-1">Based  on information return type</h3>
+<table >
+  <tr>
+    <td>T4, T4A, T4A(OAS),    T4A(P), T4A-NR, T4E, T4RSP, T4RIF, T5, T5007, T5008, AGR-1, TFSA, T4FHSA,    T2202</td>
+    <td><p>The filing due date    is the <strong>last day    of February</strong> after the preceding calendar year </p></td>
+  </tr>
+  <tr>
+    <td>T3, T1061, T2000,    T3D, T3GR, T3P, T3PRP, T3RI</td>
+    <td>90 days</strong> after    the end of the trust's tax year </p></td>
+  </tr>
+  <tr>
+    <td>T1204</td>
+    <td>March 31</strong> after the    preceding calendar year </p></td>
+  </tr>
+  <tr>
+    <td>T5013</td>
+    <td><p>The due date for filing an annual return (including distributing the    T5013 slips) depends on the type of partners, including end members of a    tiered partnership.</p>
+      <ul >
+        <li><strong>March         31</strong> after the calendar year in which the fiscal period of the partnership         ended if, throughout the fiscal period:</li>
+        <ul>
+          <li>all partners are individuals, including end          members of tiered partnership, and investment clubs that file on the          modified-partnership basis. We consider a trust to be an individual</li>
+        </ul>
+        <li><strong>5         months</strong> after the end of the partnership's fiscal         period if, throughout the fiscal period:</li>
+        <ul>
+          <li>all partners are corporations, including end          members of a tiered partnership</li>
+        </ul>
+        <li>In         all other cases, the earlier of:</li>
+        <ul>
+          <li><strong>March 31</strong> after the calendar year in          which the fiscal period of the partnership ended</li>
+          <li>the day that is <strong>5 months</strong> after the end          of the partnership's fiscal period </li>
+        </ul>
+      </ul></td>
+  </tr>
+  <tr>
+    <td>T5018</td>
+    <td>6 months</strong> after the end    of the reporting period (calendar year or fiscal period) chosen by the payer </p></td>
+  </tr>
+  <tr>
+    <td>NR4</td>
+    <td>March 31</strong> after the    preceding calendar year or <strong>90 days</strong> after the end    of the trust or estate tax year </p></td>
+  </tr>
+  <tr>
+    <td>RRSP Contribution Information Return, Pooled Registered Pension Plan    Information Return</td>
+    <td><p>File by <strong>May 1</strong> of the year in which the contribution year ends.    The contribution year is the period beginning on the 61st day of one year and    ending on the 60th day of the following year.</p></td>
+  </tr>
+  <tr>
+    <td>Part XVIII, Part XIX</td>
+    <td><p>File by <strong>May</strong> <strong>1</strong> following the calendar year    to which the information return applies.</p></td>
+  </tr>
+</table>
+<p> </p>
+<h2  id="h-2">When  is an information return considered on time</h2>
+<p>The CRA considers the information return to be filed on time if it is  received on or before the due date. 
+  When the due date falls on a Saturday, a Sunday, or a <a href="https://www.canada.ca/en/revenue-agency/services/tax/public-holidays.html">public holiday</a> recognized by the  CRA, your information return is considered on time if the CRA receives it or it  is postmarked on or before the next business day. </p>
+<h2  id="h-3">What  happens if you file late or you do not file</h2>
+<h3>Legislated  penalties</h3>
+<p>You may be charged a penalty if you file  your information return late. To learn more,  see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing penalties for information returns.</a> 
+  <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns you filed late. The penalty is $100  or the amount calculated according to the chart below, whichever is more:</p>
+<table>
+  <tr>
+    <td>
+      <strong>Legislated late-filing     penalties</strong></td>
+  </tr>
+  <tr>
+    <td>Number of information returns (slips)     filed late</td>
+    <td>Penalty per day (up to 100 days)</td>
+    <td>Maximum penalty</td>
+  </tr>
+  <tr>
+    <td><p>1 to 50</p></td>
+    <td><p>$10</p></td>
+    <td><p>$1,000</p></td>
+  </tr>
+  <tr>
+    <td><p>51 to 500</p></td>
+    <td><p>$15</p></td>
+    <td><p>$1,500</p></td>
+  </tr>
+  <tr>
+    <td><p>501 to 2,500</p></td>
+    <td><p>$25</p></td>
+    <td><p>$2,500</p></td>
+  </tr>
+  <tr>
+    <td><p>2,501 to 10,000</p></td>
+    <td><p>$50</p></td>
+    <td><p>$5,000</p></td>
+  </tr>
+  <tr>
+    <td><p>10,001 or more</p></td>
+    <td><p>$75</p></td>
+    <td><p>$7,500</p></td>
+  </tr>
+</table>
+<h3>Relieving administrative  policy </h3>
+<p>For specific information returns, the  administrative policy reduces the penalty that you may be charged to make sure  it is fair and reasonable for small businesses. You may be charged a reduced  penalty if you file your information return late and it is part of the list of  specific information returns that applies to the administrative policy.
+  <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns you filed late. The penalty is $100  or the amount calculated according to the chart below, whichever is more:</p>
+<table>
+  <tr>
+    <td>
+      <strong>Penalties     under the relieving administrative policy</strong></td>
+  </tr>
+  <tr>
+    <td>Number of information returns (slips)     filed late</td>
+    <td>Penalty per day (up to 100 days)</td>
+    <td>Maximum penalty</td>
+  </tr>
+  <tr>
+    <td><p>1 to 5</p></td>
+    <td><p>Penalty not based on number of days</p></td>
+    <td><p>$100 flat penalty</p></td>
+  </tr>
+  <tr>
+    <td><p>6 to 10</p></td>
+    <td><p>$5</p></td>
+    <td><p>$500</p></td>
+  </tr>
+  <tr>
+    <td><p>11 to 50</p></td>
+    <td><p>$10</p></td>
+    <td><p>$1,000</p></td>
+  </tr>
+  <tr>
+    <td><p>51 to 500</p></td>
+    <td><p>$15</p></td>
+    <td><p>$1,500</p></td>
+  </tr>
+  <tr>
+    <td><p>501 to 2,500</p></td>
+    <td><p>$25</p></td>
+    <td><p>$2,500</p></td>
+  </tr>
+  <tr>
+    <td><p>2,501 to 10,000</p></td>
+    <td><p>$50</p></td>
+    <td><p>$5,000</p></td>
+  </tr>
+  <tr>
+    <td><p>10,001 or more</p></td>
+    <td><p>$75</p></td>
+    <td><p>$7,500</p></td>
+  </tr>
+</table>
+<h3>Additional  legislative penalty for conspiring in order to avoid reporting contract  payments (T5018 information returns) </h3>
+<p>Any contractor that plans with  subcontractors to avoid tax by concealing underground activity could face  criminal prosecution, with fines and penalties of up to 200% of the tax they  tried to avoid.</p>
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
